--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -25,6 +25,12 @@
                 <input type="tel" id="phone" name="phone"  >
                 <div class="error-msg" id="error3"></div>
             </div>
+
+            <div class="unique-form-group">
+                <label for="referralCode">Referral Code(*optional)</label>
+                <input type="text" id="referCode" name="referralCode" value="<%=referralCode%>"      placeholder="Have a referral code? Enter it here"  >
+                 
+            </div>            
             <div class="unique-form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" >
