--- a/public/css/userSignup.css
+++ b/public/css/userSignup.css
@@ -56,7 +56,7 @@
 
 .unique-image-container {
     width: 50%;
-    background-color: #f8f8f8;
+    background-color:white;
     display: flex;
     justify-content: center;
     align-items: center;
