--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -6,6 +6,13 @@
     <div class="container-full">
         <div class="form-container">
             <h2> Admin Login</h2>
+            <div>
+                <%if(msg){%>
+                    <p style="color: red;"><%=msg%></p>
+                <%}else{%>
+                    <p></p> 
+                <%}%>       
+            </div>
          
             <form action="/admin/login" method="post">
                 <div class="form-group">
