--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -561,7 +561,7 @@
                   </button>
                 </div>
                  <div class="input-group mb-3">
-                   <input type="text" class="form-control" value="http://localhost:3006/signup?ref=<%=user.referralCode%>" id="referralLink" readonly>
+                   <input type="text" class="form-control" value="http://www.dappermens.shop/signup?ref=<%=user.referralCode%>" id="referralLink" readonly>
                    <button class="btn btn-outline-secondary" type="button" onclick="copyReferralLink()">
                      <i class="fi-rs-copy"></i>
                    </button>
