static folder setup

--- a/views/admin/pageerror.ejs
+++ b/views/admin/pageerror.ejs
@@ -1,5 +1,5 @@
 <%- include ("../../views/partials/admin/header")%>
-<link rel="stylesheet" href="/admin-css/pageerror.css">
+<link rel="stylesheet" href="/css/pageerror.css">
 <div class="error-page">
     <div class="error-container">
         <h1>Oops!</h1>
