--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -9,7 +9,7 @@
   <!-- Bootstrap & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/admin-css/categoryManagement.css">
+  <link rel="stylesheet" href="/css/categoryManagement.css">
 
   <style>
     /* Layout isolation for reuse */
